Fixed design issues

--- a/app/src/main/res/layout/fragment_third_intro.xml
+++ b/app/src/main/res/layout/fragment_third_intro.xml
@@ -49,5 +49,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/imageView5"
+        android:layout_width="426dp"
+        android:layout_height="410dp"
+        android:layout_marginTop="133dp"
+        android:src="@drawable/gif_second_intro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
