--- a/app/src/main/res/layout/fragment_club_manager_profile.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile.xml
@@ -149,4 +149,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/club_manager_profile_btn_edit_profile" />
 
+    <ImageView
+        android:id="@+id/btn_notification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/notification_icon"
+        app:layout_constraintEnd_toStartOf="@+id/btn_settings"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
