--- a/app/src/main/res/layout/fragment_fourth_intro.xml
+++ b/app/src/main/res/layout/fragment_fourth_intro.xml
@@ -17,6 +17,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/imageView6"
+        android:layout_width="426dp"
+        android:layout_height="410dp"
+        android:layout_marginTop="168dp"
+        android:src="@drawable/gif_intro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_fourth_next"
         android:layout_width="80dp"
