--- a/app/src/main/res/navigation/club_manager_bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/club_manager_bottom_navigation_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_clubManagerProfileFragment_to_clubManagerProfileMyActivities"
             app:destination="@id/clubManagerProfileMyActivities" />
+        <action
+            android:id="@+id/action_clubManagerProfileFragment_to_clubManagerProfileNotificationFragment"
+            app:destination="@id/clubManagerProfileNotificationFragment" />
     </fragment>
     <fragment
         android:id="@+id/clubManagerClubFragment"
@@ -297,5 +300,26 @@
         <argument
             android:name="request"
             app:argType="com.tahayasindogukan.studentclubapplication.core.entitiy.Request" />
+    </fragment>
+    <fragment
+        android:id="@+id/clubManagerProfileNotificationFragment"
+        android:name="com.tahayasindogukan.studentclubapplication.ui.home.clubManager.profilePages.ClubManagerProfileNotificationFragment"
+        android:label="fragment_club_manager_profile_notification"
+        tools:layout="@layout/fragment_club_manager_profile_notification" >
+        <argument
+            android:name="club"
+            app:argType="com.tahayasindogukan.studentclubapplication.core.entitiy.Club" />
+        <action
+            android:id="@+id/action_clubManagerProfileNotificationFragment_to_clubManagerFormsApprovedDetailPage"
+            app:destination="@id/clubManagerFormsApprovedDetailPage" />
+        <action
+            android:id="@+id/action_clubManagerProfileNotificationFragment_to_clubManagerFormsRejectedDetailPage"
+            app:destination="@id/clubManagerFormsRejectedDetailPage" />
+        <action
+            android:id="@+id/action_clubManagerProfileNotificationFragment_to_clubManagerPostsRejectedDetailPage"
+            app:destination="@id/clubManagerPostsRejectedDetailPage" />
+        <action
+            android:id="@+id/action_clubManagerProfileNotificationFragment_to_clubManagerPostsApprovedDetailPage"
+            app:destination="@id/clubManagerPostsApprovedDetailPage" />
     </fragment>
 </navigation>
