--- a/app/src/main/res/layout/fragment_student_calendar_info.xml
+++ b/app/src/main/res/layout/fragment_student_calendar_info.xml
@@ -247,8 +247,8 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_web_platform"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
