--- a/app/src/main/res/layout/fragment_club_manager_profile_my_activities.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile_my_activities.xml
@@ -48,10 +48,11 @@
         android:layout_width="0dp"
         android:layout_height="650dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
